# chess-engine

./: Cargo.toml  README.md
src/: atlas.rs  board.rs  board_renderer.rs  boardb.rs  boardc.rs  castle.rs  color_themes.rs  dtos.rs  figures.rs  game.rs  game_renderer.rs  gameb.rs  gamec.rs  input.rs  macros.rs  main.rs  pieces.rs  renderer.rs
